2009???? - 1.24.91

[-] * Fix code problems caught by GCC 4.5.
[-] * Compile static libraries with -fPIC (they might be later linked
      into shared ones) (bug #909).
[-] * Handle own number error code in 6510 driver (bug #910).
[-] * Add ID for Nokia 5220 (bug #910).
[-] * Handle SMSC error code in 6510 driver (bug #910).
[-] * Disable gcc warnings about non literal format strings (bug #901).
    
20090512 - 1.24.90

[-] * Fix checking for MPBR (bug #873).
[-] * Fix reading of calls with wrong timestamp (bug #872).
[-] * Increase timeout for IrDA phonet (bug #867).
[-] * Better detect some weird phone states (bug #866).
[-] * Fix handling of caller group in Python bindings (bug #870).
[-] * Correctly detect empty entries from Motorola.
[-] * Better error reporting from at-charset test.
[+] * smsd-inject now shows ID of injected message.
[-] * Fix decoding of date in Nokia phonebooks (bug #876).
[-] * Fix detection of SMS message memories in AT (bug #875).
[-] * Improve documentation for savefile (bug #893).
[-] * Add stricter check for DBI version (bug #894).
    
20090415 - 1.24.0

[-] * Better detect Bluetooth ports on Samsung (bug #862).
[-] * Ignore security errors on AT init (needed for Huawei).
    
20090330 - 1.23.92

[-] * LUID reading requires IrMC profile.
[-] * Locations for GlobeTrotter 3G+ start at 0 (bug #847).
[-] * More verbose logging of delivery reports (bug #824).
[-] * Increase default DeliveryReportDelay (bug #824).
[-] * Fixed handling of SMS locations (bug #853).
    
20090318 - 1.23.91

[+] * PostgreSQL backend now supports IDs for RunOnReceive.
[+] * RunOnReceive is started through shell not directly.
[-] * Fixed reading of empty phonebook entries from Samsung (bug #809).
[-] * Reread messages if CMGL shows them corrupted (bug #691).
[+] * Added support for vNote files.
[-] * Properly detect Nokia 6220 Classic (bug #840).
[-] * Fix writing of phonebook on Motorola V8 (bug #827).
[-] * Detect daemon on FreeBSD.